feat: 병원 목록/상세/근처 API 및 동기화 (Controller, Repository, Service)
Co-authored-by: Cursor <cursoragent@cursor.com>